syntax = "proto3";

import "google/protobuf/timestamp.proto";

package event.proto;

message EventWrapper {
  oneof event {
    Log log = 1;
    Metric metric = 2;
  }
}

message Log {
  map<string, Value> structured = 1;
}

message Value {
  oneof kind {
    bytes raw_bytes = 1;
    google.protobuf.Timestamp timestamp = 2;
    int64 integer = 4;
    double float = 5;
    bool boolean = 6;
  }
  bool explicit = 3;
}

message Metric {
  oneof metric {
    Counter counter = 1;
    Timer timer = 2;
    Gauge gauge = 3;
    Set set = 4;
  }
}

message Counter {
  string name = 1;
  float val = 2;
}

message Timer {
  string name = 1;
  float val = 2;
  float count = 3;
}

message Gauge {
  string name = 1;
  float val = 2;
  enum Direction {
    None = 0;
    Plus = 1;
    Minus = 2;
  }
  Direction direction = 3;
}

message Set {
  string name = 1;
  string val = 2;
}
